# CryptDriveClient

./: README.md  install.ps1  install.sh  pyproject.toml
.aiassistant/rules/: Must Follow.md
src/: main.py
src/Controllers/: HomeController.py  LoginController.py  SignUpController.py
src/Dependencies/: Constants.py  VerbDictionary.py
src/Services/: ClientCommsManager.py  ClientFileService.py  FileEncryptionService.py  PasswordsService.py  SecureCommunicationManager.py
src/Views/: AboutContainer.py  AccountContainer.py  FileContainer.py  HomeView.py  LoginView.py  SettingsContainer.py  SignUpView.py  UIElements.py  ViewsAndRoutesList.py
