[project]
name = "CryptDrive"
version = "0.1.0"
description = "An encrypted remote file storage solution"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Yochanan Julian", email = "yochananj08@gmail.com" }
]

dependencies = [
    "flet==0.28.3",
    "cryptography>=42",
    "argon2-cffi>=23"
]

[tool.flet]
org = "com.yochananjulian"
product = "CryptDrive"
company = "Amichai Cyber Project"
copyright = "Copyright (C) 2026 by Yochanan Julian"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3"
]